# rotwk-trowmod-switcher

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cavalry_costs_report.csv  hero_costs_report.csv  pyproject.toml  requirements.txt  version.rc
scripts/: cavalry_report.py  heroes_build_report.py  heroes_costs_updater.py  heroes_revival_sanitizer.py  langfile_porting.py  langfile_uniquekeys_cleaning.py  missing_lang_extracter.py  update_rc_version.py
src/: main.py  requirements.txt
src/core/: archiver.py  config.py  mod_retriever.py  registry.py  switcher_updater.py  utils.py  windows_utils.py
src/core/big_archiver/: archiver.py  costants.py
src/gui/: app.py  theme.py
src/rotwk_trowmod_switcher/: config.py  main.py
src/rotwk_trowmod_switcher/core/: mod_manager.py  mod_retriever.py  switcher_updater.py  utils.py  windows_utils.py
src/rotwk_trowmod_switcher/core/big_archiver/: archiver.py  costants.py  utils.py
src/rotwk_trowmod_switcher/gui/: app.py  theme.py
